# CareerOS

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.cursor/rules/: ai.mdc  architecture.mdc  backend.mdc  constitution.mdc  database.mdc  ddd.mdc  frontend.mdc  security.mdc  testing.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/careeros_api/: __main__.py  app.py  application_routes.py  auth.py  deps.py  errors.py  health.py  identity_routes.py  jobs_routes.py  notification_routes.py  profile_routes.py  profile_sync.py  router.py
apps/api/tests/: test_auth_extract.py  test_errors.py  test_health.py  test_me.py  test_startup.py  test_tracing.py
apps/web/: README.md  eslint.config.js  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/worker/: README.md  pyproject.toml
apps/worker/careeros_worker/: __main__.py  health.py  job_hunter.py  profile_bridge.py  worker.py
apps/worker/tests/: test_health.py  test_worker.py
contexts/application_tracking/: README.md  pyproject.toml
contexts/application_tracking/careeros_application_tracking/api/: __init__.py
contexts/application_tracking/careeros_application_tracking/application/: __init__.py  services.py
contexts/application_tracking/careeros_application_tracking/domain/: __init__.py  application.py
contexts/application_tracking/careeros_application_tracking/infrastructure/: __init__.py  postgres_repository.py
contexts/application_tracking/careeros_application_tracking/ports/: __init__.py  repositories.py
contexts/application_tracking/tests/: test_application.py
contexts/identity/: README.md  pyproject.toml
contexts/identity/careeros_identity/: __init__.py
contexts/identity/careeros_identity/api/: __init__.py  schemas.py
contexts/identity/careeros_identity/application/: __init__.py  ensure_user_from_identity.py
contexts/identity/careeros_identity/domain/: __init__.py  consent.py  events.py  lifecycle.py  user.py  value_objects.py
contexts/identity/careeros_identity/infrastructure/: __init__.py  postgres_user_repository.py  supabase_auth_provider.py
contexts/identity/careeros_identity/ports/: __init__.py  auth_provider.py  user_repository.py
contexts/identity/tests/: test_ensure_user_from_identity.py  test_events.py  test_postgres_user_repository.py  test_supabase_auth_provider.py  test_user.py  test_value_objects.py
contexts/matching/: README.md  pyproject.toml
contexts/matching/careeros_matching/: __init__.py
contexts/matching/careeros_matching/api/: __init__.py
contexts/matching/careeros_matching/application/: __init__.py  copilot.py  services.py  sync_from_profile.py
contexts/matching/careeros_matching/domain/: __init__.py  match.py  ranking.py  seeker_criteria.py
contexts/matching/careeros_matching/infrastructure/: __init__.py  postgres_repos.py
contexts/matching/careeros_matching/ports/: __init__.py  repositories.py
contexts/matching/tests/: test_copilot.py  test_ranking.py  test_sync_from_profile.py
contexts/notifications/: pyproject.toml
contexts/notifications/careeros_notifications/: __init__.py
contexts/notifications/careeros_notifications/api/: __init__.py
contexts/notifications/careeros_notifications/application/: __init__.py  services.py
contexts/notifications/careeros_notifications/domain/: notification.py
contexts/notifications/careeros_notifications/infrastructure/: __init__.py  postgres_repository.py
contexts/notifications/careeros_notifications/ports/: __init__.py  repositories.py
contexts/notifications/tests/: test_notification.py
contexts/opportunity/: README.md  pyproject.toml
contexts/opportunity/careeros_opportunity/: __init__.py
contexts/opportunity/careeros_opportunity/application/: __init__.py  boards.py  ingest.py
contexts/opportunity/careeros_opportunity/domain/: __init__.py  events.py  lifecycle.py  opportunity.py  value_objects.py
contexts/opportunity/careeros_opportunity/infrastructure/: __init__.py  ashby_source.py  greenhouse_source.py  postgres_opportunity_repository.py  text_skills.py
contexts/opportunity/careeros_opportunity/ports/: __init__.py  opportunity_source.py
contexts/opportunity/tests/: test_greenhouse_source.py  test_opportunity.py
contexts/profile/: pyproject.toml
contexts/profile/careeros_profile/: __init__.py
contexts/profile/careeros_profile/application/: __init__.py  services.py
contexts/profile/careeros_profile/domain/: __init__.py  extraction.py  profile.py
contexts/profile/careeros_profile/infrastructure/: __init__.py  github_analyzer.py  portfolio_fetcher.py  postgres_profile_repository.py  resume_parser.py
contexts/profile/careeros_profile/ports/: __init__.py  profile_ports.py
contexts/profile/tests/: test_extraction.py
docs/: ai-architecture.md  development.md  domain-model.md  engineering-constitution.md  environments.md  system-architecture.md  technical-architecture.md  vision.md
docs/adr/: 0000-lock-architecture-documents.md  0001-job-intelligence-mvp.md  0002-careeros-intelligence-mvp.md  template.md
docs/roadmap/: M0-foundations.md
evals/: README.md  run_gate.py
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/migrations/: README.md  alembic.ini  env.py
scripts/: typecheck_python.py
shared/platform/: pyproject.toml
shared/platform/careeros_platform/: __init__.py  db.py  health.py  logging.py  settings.py  task_queue.py  tracing.py
shared/platform/tests/: test_health.py  test_logging.py  test_settings.py  test_tracing.py
shared/shared_kernel/: pyproject.toml
shared/shared_kernel/careeros_shared_kernel/: __init__.py  errors.py  events.py  result.py
shared/shared_kernel/tests/: test_errors.py  test_events.py  test_result.py
supabase/: .gitignore  config.toml
(+35 files in other folders)
