[project]
name = "career-os"
version = "0.0.0"
description = "CareerOS monorepo - Python workspace root (see AGENTS.md and docs/technical-architecture.md)"
requires-python = ">=3.14,<3.15"

[dependency-groups]
dev = [
    "ruff==0.15.22",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "httpx==0.28.1",
]

[tool.uv]
package = false

[tool.uv.workspace]
# Python packages land in later M0 tasks (api T6, worker T7, shared/* T8-T11).
# Only glob patterns here: uv tolerates globs with zero matches, so the
# workspace resolves before any member exists. Non-glob members (agents,
# evals) are added when those packages are created.
members = [
    "apps/*",
    "shared/*",
    "contexts/*",
]
# apps/web is the Next.js app (pnpm workspace, T2), never a Python member.
exclude = ["apps/web"]

# --- Lint + format (ruff) ---

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["careeros_api", "careeros_platform"]

# --- Typecheck (mypy, strict) ---

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
pretty = true
exclude = ['^\.venv/', '/node_modules/']
