[project]
name = "careeros-api"
version = "0.0.0"
description = "CareerOS FastAPI modular monolith (sync HTTP; enqueues async work)"
requires-python = ">=3.14,<3.15"
dependencies = [
    "careeros-platform",
    "careeros-shared-kernel",
    "careeros-identity",
    "careeros-opportunity",
    "careeros-matching",
    "careeros-application-tracking",
    "careeros-profile",
    "careeros-notifications",
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "psycopg[binary]==3.2.10",
]

[tool.uv.sources]
careeros-platform = { workspace = true }
careeros-shared-kernel = { workspace = true }
careeros-identity = { workspace = true }
careeros-opportunity = { workspace = true }
careeros-matching = { workspace = true }
careeros-application-tracking = { workspace = true }
careeros-profile = { workspace = true }
careeros-notifications = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["careeros_api"]
