[project]
name = "careeros-application-tracking"
version = "0.0.0"
description = "CareerOS Application Tracking (save, apply, tracker) — MVP workflow"
requires-python = ">=3.14,<3.15"
dependencies = [
    "careeros-shared-kernel",
    "psycopg[binary]==3.2.10",
]

[tool.uv.sources]
careeros-shared-kernel = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["careeros_application_tracking"]
