[project]
name = "careeros-identity"
version = "0.0.0"
description = "CareerOS Identity & Access bounded context (User, Consent)"
requires-python = ">=3.14,<3.15"
dependencies = [
    "careeros-shared-kernel",
    "psycopg[binary]==3.2.10",
    "PyJWT[crypto]==2.10.1",
    "pydantic==2.13.4",
    "fastapi==0.139.2",
]

[tool.uv.sources]
careeros-shared-kernel = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["careeros_identity"]
