[project]
name = "careeros-matching"
version = "0.0.0"
description = "CareerOS Matching & Fit bounded context (criteria, ranking, recommendations)"
requires-python = ">=3.14,<3.15"
dependencies = [
    "careeros-shared-kernel",
    "psycopg[binary]==3.2.10",
    "pydantic==2.13.4",
]

[tool.uv.sources]
careeros-shared-kernel = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["careeros_matching"]
