[project]
name = "careeros-profile"
version = "0.0.0"
description = "CareerOS Career Profile + lightweight evidence ingestion (ADR-0002)"
requires-python = ">=3.14,<3.15"
dependencies = [
    "careeros-shared-kernel",
    "psycopg[binary]==3.2.10",
    "httpx==0.28.1",
]

[tool.uv.sources]
careeros-shared-kernel = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["careeros_profile"]
