[project]
name = "careeros-platform"
version = "0.0.0"
description = "CareerOS shared platform primitives (see docs/technical-architecture.md §2)"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["careeros_platform"]
