[project]
name = "careeros-shared-kernel"
version = "0.0.0"
description = "CareerOS shared kernel: Result, error taxonomy, base domain event (pure, no I/O)"
requires-python = ">=3.14,<3.15"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["careeros_shared_kernel"]
